#16 Fix: Relevant tags, button small style change

--- a/style/components/button.css
+++ b/style/components/button.css
@@ -27,6 +27,13 @@
   background-color: var(--color-bg-light);
 }
 
+.btn.small {
+  --button-padding-x: 0.875rem;
+  --button-padding-y: 0.3rem;
+  height: 2.375rem;
+  font-size: 0.875rem;
+}
+
 .btn.light {
   background-color: #fff;
   color: var(--color-body);
@@ -39,13 +46,6 @@
 
 .btn.icon-only {
   --button-padding-x: 0.6rem;
-}
-
-.btn.small {
-  --button-padding-x: 0.4rem;
-  --button-padding-y: 0.3rem;
-  font-size: 1.2rem;
-  height: 2.4375rem;
 }
 
 .btn.primary {
