--- a/style/components/comment-section.css
+++ b/style/components/comment-section.css
@@ -21,8 +21,3 @@
   display: flex;
   align-items: center;
 }
-
-.comment-section .footer .btn {
-  font-size: 0.8rem;
-  height: 2.2rem;
-}
