--- a/style/components/round-badge.css
+++ b/style/components/round-badge.css
@@ -2,8 +2,8 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  width: 3.5rem;
-  height: 2.5rem;
+  width: 4.5rem;
+  height: 3rem;
   background-color: var(--color-bg);
   border-radius: var(--border-radius);
 }
