--- a/style/components/user-comment.css
+++ b/style/components/user-comment.css
@@ -5,6 +5,8 @@
 
 .user-comment .title {
   color: var(--color-heading);
+  display: inline-block;
+  margin-bottom: 0.3rem;
 }
 
 .user-comment .time {
