--- a/style/pages/projects-details.css
+++ b/style/pages/projects-details.css
@@ -36,7 +36,7 @@
 }
 
 .projects-details .project .content-title {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .projects-details .project .header {
