--- a/style/typography.css
+++ b/style/typography.css
@@ -40,6 +40,6 @@ h6 {
 
 .content-title {
   text-transform: uppercase;
-  font-size: 0.85rem;
   color: var(--color-body);
+  display: inline-block;
 }
